tests/expectations/compiler/integers/i16/no_space_between_literal.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:5:15
     |
   5 |         let i = 1 i16;
     |               ^"""]
